navlinks and background image

--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <title>Studio Boca</title>
-  </head>
-  <body>
-    <h1>Welcome to Studio Boca</h1>
-  </body>
+
+
+
+<head>
+  <title>Studio Boca</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <!--	<link rel="stylesheet" type="text/css" href="/reset.css">-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+  <ul class="nav justify-content-center" id="navBar">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">About</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Work</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Contact</a>
+    </li>
+    
+  </ul>
+
+
+
+
+
+
+  <!-- Save for Web Slices (PSExpress_2020-09-04_18-11-13_116.psd) -->
+  <!-- End Save for Web Slices -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
 
 </html>
