cool contact page

--- a/about.html
+++ b/about.html
@@ -14,20 +14,22 @@
 </head>
 
 <body>
-  <ul class="nav justify-content-center" id="navBar">
-    <li class="nav-item">
-      <a class="nav-link active" href="./about.html">About</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="portfolio.html">Work</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="./contact.html">Contact</a>
-    </li>
-    <div></div>
-  </ul>
+    <ul class="nav justify-content-center" id="navBar">
+        <li class="nav-item">
+          <a class="nav-link active" href="./about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contact.html">Contact</a>
+        </li>
+        <div></div>
+      </ul>
 
-  <h1 id="content-div"></h1>
+  <h1 id="content-div">
+      About Studio Boca
+  </h1>
 
 
   
